# igel

./: .gitignore  Cargo.toml  Dockerfile  README.md  igel.toml
.github/workflows/: ci.yml
sentinel/: README.md  baseline-credential-exposure.yaml  baseline-defense-degradation.yaml  baseline-ssh-hardening-drift.yaml  fim-critical-file-modified.yaml  fim-persistence-implant.yaml  missing-heartbeat.yaml  new-listening-service.yaml  outbound-connection-anomaly.yaml  resource-hijacking.yaml  tamper-kernel-integrity.yaml  tamper-process-injection.yaml  tamper-unauthorized-rw-mount.yaml  unexpected-script-interpreter.yaml
src/: collect.rs  config.rs  events.rs  main.rs  netlink.rs  self_protect.rs  sink.rs  tamper.rs
tests/: integration.rs
