[package]
name = "igel"
version = "0.1.0"
edition = "2021"
description = "Tiny IoT/OT security sensor. Collects process, network, file-integrity, and baseline telemetry. Outputs NDJSON to stdout or any HTTP endpoint."
license = "MIT"
repository = "https://github.com/flavioaiello/igel"
readme = "README.md"
keywords = ["iot", "ot", "security", "sensor", "fim"]
categories = ["command-line-utilities"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime — minimal feature set
tokio = { version = "1", features = ["rt", "macros", "time", "fs", "signal", "io-std"] }

# HTTP sink (optional — omit for stdout-only builds)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"], optional = true }

# Config file support
toml = "0.8"

[features]
default = []
http = ["reqwest"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
