[package]
name = "igel"
version = "0.1.0"
edition = "2021"
description = "Tiny IoT/OT security sensor. Collects process, network, file-integrity, and baseline telemetry. Outputs NDJSON to stdout or any HTTP endpoint."
license = "MIT"
repository = "https://github.com/flavioaiello/igel"
readme = "README.md"
keywords = ["iot", "ot", "security", "sensor", "fim"]
categories = ["command-line-utilities"]

[dependencies]
serde = { version = "1", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
sysinfo = { version = "0.33", default-features = false, features = ["system", "network"] }
sha2 = { version = "0.10", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "std", "tracing-log"] }

# Async runtime — single-threaded for IoT footprint
tokio = { version = "1", features = ["rt", "macros", "time", "fs", "signal", "io-std", "sync"] }

# HTTP sink (optional — omit for stdout-only builds)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"], optional = true }

# Config file support
toml = { version = "0.8", default-features = false, features = ["parse"] }
notify = "6.1.1"
flume = { version = "0.12.0", default-features = false, features = ["async"] }
libc = "0.2.182"
rumqttc = { version = "0.25", optional = true }
rustls-native-certs = { version = "0.8", optional = true }
rustls = { version = "0.23.37", default-features = false, features = ["std"], optional = true }
anyhow = "1.0.102"

[target.'cfg(target_os = "linux")'.dependencies]
landlock = { version = "0.4", optional = true }

[features]
default = ["http", "mqtt", "landlock"]
http = ["reqwest"]
mqtt = ["rumqttc", "rustls-native-certs", "rustls"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dev-dependencies]
serde_json = "1"
sha2 = { version = "0.10", default-features = false }
tokio = { version = "1", features = ["rt", "macros", "time", "fs", "sync"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
notify = "6.1.1"
flume = { version = "0.12.0", default-features = false, features = ["async"] }
